crates/usfm_parser/tests/snapshots/recovery__star_note_caller.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 text\\f * \\ft note\\f* more"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..46
  VerseStart 1@16..20
  Text "text"@21..25
  Note f caller=*@25..41
    Char ft@30..41
      Text "note"@34..38
  Text " more"@41..46
  VerseEnd 1
ChapterEnd 1
