crates/usfm_parser/tests/snapshots/recovery__two_tables_with_a_dropped_marker.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\tr \\tc1 x\\c\n\\tr \\tc1 y"
---
Table@0..23
  Row@0..10
    Cell header=false align=start column=1 colspan=1@4..10
      Text "x"@9..10
  Row@13..23
    Cell header=false align=start column=1 colspan=1@17..23
      Text "y"@22..23
--- diagnostics
error[missing-chapter-number] @10..12: `\c` must be followed by a chapter number
