crates/usfm_parser/tests/snapshots/recovery__unexpected_pipe.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a | b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..26
  VerseStart 1@16..20
  Text "a | b"@21..26
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unexpected-pipe] @23..24: `|` outside a character style; kept as text
