crates/usfm_parser/tests/snapshots/recovery__unknown_book_code.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GENESIS Some book\n\\c 1\n\\p \\v 1 a"
---
ChapterStart 1@22..26
Para p@27..36
  VerseStart 1@30..34
  Text "a"@35..36
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unknown-book-code] @4..11: `GENESIS` is not a book code
