crates/usfm_parser/tests/snapshots/recovery__unknown_marker.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a \\foo custom \\foo* b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..42
  VerseStart 1@16..20
  Text "a custom  b"@21..42
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[unknown-marker] @23..27: unknown marker `\foo`
error[unknown-marker] @35..40: unknown marker `\foo*`
